# HeatEqSolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
agent/: debug_agent.py  llm.py  tools.py
docs/: README.md  api_reference.md  numerical_methods.md  physics_and_math.md  user_guide.md
examples/: gaussian_diffusion.cpp  heat_3d.cpp
include/: Grid.hpp  heat_solver.hpp  utils.hpp
scripts/: generate_test_data.py  requirements.txt  visualize.py
src/: Grid.cpp  heat_solver.cpp  main.cpp  utils.cpp
tests/: test_grid.cpp  test_heat_solver.cpp
